--- a/Implementacion/ModuloWeb/Ejemplo/Index.html
+++ b/Implementacion/ModuloWeb/Ejemplo/Index.html
@@ -5,7 +5,7 @@
 <title>Proyecto Tecnologo</title>
 
 <head>
-<script type="text/javascript" src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
+<script type="text/javascript" src='jquery-1.10.1.min.js'></script>
 <script type="text/javascript" src='demo.js'></script>
 <link rel="stylesheet" href="animations.css">
 <style type="text/css">
