--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -4,7 +4,7 @@
 
 <body style="background-color: currentcolor;">
 
-	<div class="PantallaCompleta span12">
+	<div class="PantallaCompleta span12 fijo">
 		<div class="span3" style="margin:auto"><img src="img/logo.jpg"></div>
 		<div class="span6">
 			<input type="text" class="barraBusquedaHome search-query span5" style="height:initial" placeholder="Buscar Contenido...">
