Nuevos documentos, barras fijas en presentacion

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	
-	<div class="span2" style="margin-left: auto; background-color: rgb(245, 245, 245);">
+	<div class="span2 menuEnCajaFija" style="margin-left: auto; background-color: rgb(245, 245, 245);">
 		<ul class="nav nav-list">
 			<li class="nav-header">List header</li>
 			<li class="active"><a href="#">Home</a></li>
@@ -106,6 +106,8 @@
 	    <button type="button" class="btn btn-primary">Confirmar</button>
 	  </div>
 	</div>
+	
+	<div style="heigth:1500px"></div>
 </body>
 
 <script src="js/jquery.min.js"></script>
