--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="css/market.css" media="screen" />
 
-<body>
+<body style="background-color: currentcolor;">
 <div class="span13 fijo">
 	<div class="PantallaCompleta span12">
 		<div class="span3" style="margin:auto"><img src="img/logo.jpg"></div>
@@ -17,11 +17,10 @@
 	</div>
 	<div class="span2" style="margin-left: auto; background-color: rgb(245, 245, 245);">
 		<ul class="nav nav-list">
-			<li class="nav-header">Digital Chocolate</li>
-			<li class="active"><a href="#">Inicio</a></li>
+			<li class="nav-header">List header</li>
+			<li class="active"><a href="#">Home</a></li>
 			<li><a href="#">Novedades</a></li>
-			<li><a href="#">Top Ventas</a></li>
-			<li><a href="#">Top Gratis</a></li>			
+			<li><a href="#">Libreria</a></li>
 			<li class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias<b class="caret"></b></a>
 				<ul class="dropdown-menu pull-right">
@@ -49,25 +48,20 @@
 					<div class="item"><img src="img/slide05.jpg"></img></div>
 					<div class="item"><img src="img/slide06.jpg"></img></div>
 				</div>
+				<!-- Carousel nav -->
 				<a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
 				<a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 			</div>
+	      <!—Sidebar content—>
 	    </div>
+	 <!--    </div> -->  
 	</div>
 	
-	<div class="span13 divContenidosInicial color1Inicio"><h2 class="span12 pull-right">Aplicaciones</h2></div>
-	<div class="span13" style="height:50px;"></div>
-	<div class="span13 divContenidosInicial color2Inicio">
-		<div class="span9"></div>	
-		<div class="span3 pull-right"><h2 >Libros</h2></div>
+	<div class="span13">
+		<img src="img/slide04.jpg"></img>
 	</div>
-	<div class="span13" style="height:50px;"></div>
-	<div class="span13 divContenidosInicial color1Inicio"><h2 class="span12 pull-right">Videos</h2></div>	
-	<div class="span13" style="height:50px;"></div>
-	<div class="span13 divContenidosInicial color2Inicio">
-		<div class="span9"></div>	
-		<div class="span3 pull-right"><h2 >Musica</h2></div>
-	</div>	
+	
+	
 <!-- Modals -->	 
 	<div id="loginUsuario" class="modalChocolate modal">
 	  <div class="modal-header">
@@ -88,6 +82,7 @@
 	    <button type="button" class="btn btn-primary">Confirmar</button>
 	  </div>
 	</div>	
+	
 	<div id="registroUsuario" class="modalChocolate modal">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="cerrarPanelRegistro()">X</button>
@@ -114,6 +109,8 @@
 	    <button type="button" class="btn btn-primary">Confirmar</button>
 	  </div>
 	</div>
+
+	<div style="height:1500px">pelo</div>
 </body>
 
 <script src="js/jquery.min.js"></script>
