registro de usuario

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -413,17 +413,17 @@
 			<div class="rowo">
 				<div class="col-md-6">
 					<h4>Datos de Usuario</h4>
-					<p>Correo    			<input type="text" class="col-md-12"></p>
-					<p>Contrase&ntilde;a    <input type="password" class="col-md-12"></p>
-					<p>Nombre Usuario  		<input type="text" class="col-md-12"></p>     
+					<p>Correo    			<input id="inputCorreo" type="email" class="col-md-12"></p>
+					<p>Contrase&ntilde;a    <input id="inputPass" type="password" class="col-md-12"></p>
+					<p>Nombre Usuario  		<input id="inputNick" type="text" class="col-md-12"></p>     
 				</div>
 				<div class="col-md-6">
 					<h4>Datos Personales</h4>
-					<p>Nombres    			<input type="text" class="col-md-12"></p>
-					<p>Apellidos    		<input type="text" class="col-md-12"></p>
-					<p>Sexo    				<input type="text" class="col-md-12"></p>
-					<p>Fecha de Nacimiento  <input type="text" class="col-md-12"></p>
-					<p>Telefono Movil    	<input type="text" class="col-md-12"></p>
+					<p>Nombres	    		<input id="inputNombre" type="text" class="col-md-12"></p>
+					<p>Apellidos    		<input id="inputApellido" type="text" class="col-md-12"></p>
+					<p>Sexo    				<input id="inputSexo" type="text" class="col-md-12"></p>
+					<p>Fecha de Nacimiento  <input id="inputFecha" type="text" class="col-md-12"></p>
+					<p>Telefono Movil    	<input id="inputTel" type="text" class="col-md-12"></p>
 				</div>
 			</div>
 		</div>
