Primer Prueba Registro Usuario 1.1

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -429,7 +429,7 @@
 		</div>
 		<div class="modal-footer">
 			<button type="button" data-dismiss="modal" class="btn" onclick="cerrarPanelRegistro()">Cerrar</button>
-			<button type="button" class="btn btn-primary">Confirmar</button>
+			<button type="button" class="btn btn-primary" onclick="crearUsuario()">Confirmar</button>
 		</div>
 	</div>
 	
