--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -394,14 +394,14 @@
 	    <div class="row">
 	      <div class="col-md-12">
 			<h4>Datos de Usuario</h4>
-			<p>Correo    			<input type="text" class="col-md-12 form-control"></p>
-			<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control"></p>
+			<p>Correo    			<input type="text" class="col-md-12 form-control" id="loginCorreo"></p>
+			<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="loginPass"></p>
 	      </div>
 	    </div>
 	  </div>
 	  <div class="modal-footer">
 	    <button type="button" data-dismiss="modal" class="btn" onclick="cerrarPanelLogin()">Cerrar</button>
-	    <button type="button" class="btn btn-primary">Confirmar</button>
+	    <button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
 	  </div>
 	</div>
 
