--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/Admin_Home.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/Admin_Home.html
@@ -16,7 +16,7 @@
 
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Modulo Administrador</title>
 </head>
 <body>
 	<div class="row-fluid">
