--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="7b6581pt : Proyecto Final" />
+    <meta name="description" content="MarketPlace Tecnologo : Proyecto Final Tecnologo Informatico" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>7b6581pt</title>
+    <title>MarketPlace Tecnologo</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/ORGTecnologo/7b6581PT">View on GitHub</a>
 
-          <h1 id="project_title">7b6581pt</h1>
-          <h2 id="project_tagline">Proyecto Final</h2>
+          <h1 id="project_title">MarketPlace Tecnologo</h1>
+          <h2 id="project_tagline">Proyecto Final Tecnologo Informatico</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/ORGTecnologo/7b6581PT/zipball/master">Download this project as a .zip file</a>
@@ -32,9 +32,16 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Bienvenidos a la pagina Oficial del MarketPlace - Tecnologo</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+
+<p>Descargate el proyecto:</p>
+
+<pre><code>$ git clone https://github.com/ORGTecnologo/7b6581PT.git
+</code></pre>
+
+<p>O esto:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -54,7 +61,9 @@ $ git checkout gh-pages
 <p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
 <h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a name="autores-y-contribuyentes" class="anchor" href="#autores-y-contribuyentes"><span class="octicon octicon-link"></span></a>Autores y contribuyentes</h3>
+
+<p><a href="https://github.com/pelo8888" class="user-mention">@pelo8888</a></p>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
@@ -68,7 +77,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">7b6581pt maintained by <a href="https://github.com/ORGTecnologo">ORGTecnologo</a></p>
+        <p class="copyright">MarketPlace Tecnologo maintained by <a href="https://github.com/ORGTecnologo">ORGTecnologo</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
