--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -5,8 +5,7 @@
 
 <body>
 <nav class="navbarFija navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
-  <!-- El logotipo y el icono que despliega el menú se agrupan
-       para mostrarlos mejor en los dispositivos móviles -->
+  <!-- El logotipo y el icono que despliega el menú se agrupan para mostrarlos mejor en los dispositivos móviles -->
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse"
 			data-target=".navbar-ex1-collapse">
@@ -17,9 +16,7 @@
 		</button>
 		<a class="navbar-brand" href="#">Market Place Tecnologo</a>
 	</div>
-
-<!-- Agrupar los enlaces de navegación, los formularios y cualquier
-   otro elemento que se pueda ocultar al minimizar la barra -->
+<!-- Agrupar los enlaces de navegación, los formularios y cualquier otro el emento que se pueda ocultar al minimizar la barra-->
 	<div class="collapse navbar-collapse navbar-ex1-collapse"> 
 		<form class="navbar-form navbar-left" role="search">
 			<div class="form-group">
@@ -28,54 +25,12 @@
 			<button class="btn btn-primary barraBusquedaHome" style="margin-top: initial;">
 				<span class="glyphicon glyphicon-search"></span> Buscar</button>
 		</form>
-	<!--
-		<div class="col-md-1">
-				<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Opciones</a>
-				<ul class="dropdown-menu col-md-3 ">
-					<li class="nav-header">Market Place</li>
-					<li class="active"><a href="#">Inicio</a></li>
-					<li><a href="#">Novedades</a></li>
-					<li><a href="#">Top Ventas</a></li>
-					<li><a href="#">Top Gratis</a></li>			
-					<li class="divider"></li>
-					<li class="nav-header">Opciones</li>
-					<li><a href="#">Perfil</a></li>
-					<li><a href="#">Mis aplicaciones</a></li>	
-				</ul>
-		</div>
-	-->	
 		<div class="col-md-2 pull-right">			
 			<button class="btn btn-primary barraBusquedaHome" href="#registroUsuario" onclick="clickRegistroUsuario()">Registrarse</button>
 			<button class="btn btn-primary barraBusquedaHome" onclick="clickLogin()">Login</button>	
 		</div>
 	</div>
 </nav>
-<!--
--->
-<!--
-	<div class="col-md-2" style="margin-left: auto; background-color: rgb(245, 245, 245);">
-		<ul class="nav nav-list">
-			<li class="nav-header">Digital Chocolate</li>
-			<li class="active"><a href="#">Inicio</a></li>
-			<li><a href="#">Novedades</a></li>
-			<li><a href="#">Top Ventas</a></li>
-			<li><a href="#">Top Gratis</a></li>			
-			<li class="dropdown">
-				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Categorias<b class="caret"></b></a>
-				<ul class="dropdown-menu pull-right">
-					<li><a href="#">Deportes</a></li>
-					<li><a href="#">Finanzas</a></li>
-					<li><a href="#">Entretenimiento</a></li>
-					<li><a href="#">Infantiles</a></li>
-					<li><a href="#">Gastronomia</a></li>
-				</ul>
-			</li></li>
-			<li class="nav-header">Opciones</li>
-			<li><a href="#">Perfil</a></li>
-			<li><a href="#">Mis aplicaciones</a></li>		
-		</ul>
-	</div>
--->
 </div>	
 	<div class="container-fluid carouselInicio">
 	<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno">Bajar!!</a>
@@ -95,20 +50,6 @@
 	    </div>
 	</div>
 
-<!--
-	<div class="col-md-12 carousel slide container carouselInicio" id="myCarousel" style="padding-top:47px;background-color: rgb(245, 245, 245);">
-			<div class="carousel-inner">
-				<div class="active item"><img src="img/slide01.jpg"></img></div>
-				<div class="item"><img src="img/slide02.jpg"></img></div>
-				<div class="item"><img src="img/slide03.jpg"></img></div>
-				<div class="item"><img src="img/slide04.jpg"></img></div>
-				<div class="item"><img src="img/slide05.jpg"></img></div>
-				<div class="item"><img src="img/slide06.jpg"></img></div>
-			</div>
-			<a class="carousel-control left" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-			<a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-	</div>
--->
 <div class="col-md-12" style="height:50px;"></div>
 <!-- APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS -->	
 	<div class="col-md-12 divContenidosInicial color1Inicio" style="background-image: url(img/appsProy.png);">
